# dsperado

./: .gitmodules  CMakeLists.txt  LICENSE  README.md
include/: Arena.h  Complex.h  Constants.h  FFTransformer.h  FIR.h  HilbertTransformer.h  XCorr.h
src/: FIR.cpp  HilbertTransformer.cpp  XCorr.cpp  main.cpp
tools/: build_fftw3.sh
